fix(metrics): add a default java option to the image to fix metrics (#5890)
* fix(metrics): add a default java option to the image

This is needed for micrometer metrics to work
correctly with virtual thread executors

* fix(metrics): replicate the change in the other start.sh